# conference-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
data/seed/: reference_conferences.json
docs/: PRD.md  day1-task2-questions.md
src/: config.py  main.py  scheduler.py
src/agents/: agent_loop.py  orchestrator.py  personas.py  speaker_researcher.py  tool_defs.py  trend_researcher.py
src/api/: agenda.py  budget.py  contacts.py  feedback.py  milestones.py  planner.py  research.py  speakers.py  suggestions.py  tracks.py  trends.py
src/db/: database.py  models.py  queries.py
src/prompts/: daily_scan.py  feedback.py  orchestrator.py  personas.py  planner_director.py  speaker_research.py  trend_research.py
src/tools/: db_tools.py  scoring_tools.py
src/web/: app.py
tests/: test_api.py  test_db.py
